<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.biker.ListBikerFragment">

    <TextView
        android:id="@+id/txtTiitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ar_one_sans_medium"
        android:text="@string/subtitle_home"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="4dp"
        android:scrollbarSize="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTiitle">

        <RadioGroup
            android:id="@+id/rdGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backgroud_radio_button"
                android:buttonTint="@color/primaryDarkBlack"
                android:checked="true"
                android:fontFamily="@font/ar_one_sans_medium"
                android:gravity="start|center_vertical"
                android:minWidth="120dp"
                android:text="@string/dis_biker"
                android:textColor="@color/primaryDarkBlack"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/backgroud_radio_button"
                android:buttonTint="@color/primaryDarkBlack"
                android:fontFamily="@font/ar_one_sans_medium"
                android:gravity="start|center_vertical"
                android:minWidth="120dp"
                android:text="@string/no_dis_biker"
                android:textColor="@color/primaryDarkBlack"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rd3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/backgroud_radio_button"
                android:buttonTint="@color/primaryDarkBlack"
                android:fontFamily="@font/ar_one_sans_medium"
                android:gravity="start|center_vertical"
                android:minWidth="120dp"
                android:text="@string/cancel_biker"
                android:textColor="@color/primaryDarkBlack"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rd4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/backgroud_radio_button"
                android:buttonTint="@color/primaryDarkBlack"
                android:fontFamily="@font/ar_one_sans_medium"
                android:gravity="start|center_vertical"
                android:minWidth="120dp"
                android:text="@string/all_biker"
                android:textColor="@color/primaryDarkBlack"
                android:textSize="14sp" />

        </RadioGroup>

    </HorizontalScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subContent"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subContent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.umg_moto_xpress_android.component.recylcer.ItemBikerListRecycler
                android:id="@+id/contentRecycler1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:descriptionMessageEmpty="@string/des_isEmpty"
                app:textTitle="Disponible"
                app:titleMessageEmpty="@string/title_isEmpty" />

            <com.example.umg_moto_xpress_android.component.recylcer.ItemBikerListRecycler
                android:id="@+id/contentRecycler2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:descriptionMessageEmpty="@string/des_isEmpty"
                app:textTitle="No Disponible"
                app:titleMessageEmpty="@string/title_isEmpty" />

            <com.example.umg_moto_xpress_android.component.recylcer.ItemBikerListRecycler
                android:id="@+id/contentRecycler3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:descriptionMessageEmpty="@string/des_isEmpty"
                app:textTitle="Cancelados Disponible"
                app:titleMessageEmpty="@string/title_isEmpty" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>