<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileUserFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroud_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/primaryGray"
            app:cardCornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/primaryBlue"
            app:strokeWidth="0dp">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/user_solid" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/adlam_display"
            android:text="Svega"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/card"
            app:layout_constraintTop_toTopOf="@+id/card" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ar_one_sans_medium"
            android:text="svega@gmail.com"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/card"
            app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btnEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.umg_moto_xpress_android.component.DetailsComponent
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_divider_inferior"
                app:drawImageProfile="@drawable/user_solid_white"
                app:textDesProfile="Soni Javier"
                app:titleProfile="@string/name" />

            <com.example.umg_moto_xpress_android.component.DetailsComponent
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_divider_inferior"
                app:drawImageProfile="@drawable/user_solid_white"
                app:textDesProfile="Vega Munoz"
                app:titleProfile="@string/lastName" />

            <com.example.umg_moto_xpress_android.component.DetailsComponent
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_divider_inferior"
                app:drawImageProfile="@drawable/user_solid_white"
                app:textDesProfile="Svega"
                app:titleProfile="@string/username" />

            <com.example.umg_moto_xpress_android.component.DetailsComponent
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_divider_inferior"
                app:drawImageProfile="@drawable/phone_solid"
                app:textDesProfile="78902563"
                app:titleProfile="@string/phone" />

            <com.example.umg_moto_xpress_android.component.DetailsComponent
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_divider_inferior"
                app:drawImageProfile="@drawable/location_dot_solid"
                app:textDesProfile="guatemala"
                app:titleProfile="@string/address" />

            <com.example.umg_moto_xpress_android.component.DetailsComponent
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_divider_inferior"
                app:drawImageProfile="@drawable/envelope_solid"
                app:textDesProfile="svega@gmail.com"
                app:titleProfile="@string/email" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Editar"
        app:icon="@drawable/pen_solid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>